--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-router": "^6.4.5",
+    "react-router-dom": "^6.4.5"
   },
   "scripts": {
     "start": "react-scripts start",
