--- a/package.json
+++ b/package.json
@@ -3,10 +3,17 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.21.1",
+    "debug": "^4.3.4",
+    "events": "^3.3.0",
+    "http": "^0.0.0",
+    "https": "^1.0.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-router": "^6.4.5",
-    "react-router-dom": "^6.4.5"
+    "react-router": "6.4.5",
+    "react-router-dom": "6.4.5",
+    "semantic-ui-react": "2.1.4",
+    "zlib": "^1.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
